<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" 
    android:background="#000000"
    >



    <AbsoluteLayout
        android:id="@+id/absoluteLayout1"
        android:layout_width="321dp"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_x="7dp"
            android:layout_y="47dp"
            android:text="@string/updateText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="7dp"
            android:layout_y="26dp"
            android:text="@string/updateTitle"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/update"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_x="82dp"
            android:layout_y="92dp"
            android:text="@string/updateButton" />

    </AbsoluteLayout>

</LinearLayout>