<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkg" >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >




            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="281dp"
                android:layout_height="223dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sponsor"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/invite"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/appShop"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textColor="#FFFFFF"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/startButton" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>